Add mobile image

--- a/index.html
+++ b/index.html
@@ -3,35 +3,40 @@
 <head>
   <style>
   body {
-    background-image: url('image.jpg');
+    background-image: url('image_mobile.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;  
     background-size: cover;
   }
+  @media (min-width:961px) { 
+    body {
+      background-image: url('image.jpg');
+      background-repeat: no-repeat;
+      background-attachment: fixed;  
+      background-size: cover;
+    }
+}   
   h1 {
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 4vw;
     padding-top: 50px;
     padding-left: 50px;
   }
   h2 {
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 3vw;
     padding-left: 50px;
   }
   h3 {
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     padding-left: 50px;
-    font-size: 2vw;
   }
   </style>
 </head>
 
 <body>
-  <h1>Johanna und Marcel</h1>
+  <h1>Johanna and Marcel</h1>
 <h2>Happily married since:</h2>
 
  <!-- Display the countdown timer in an element -->
